--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,7 +57,7 @@ input[type="password"] {
   padding: 10px;
   margin-bottom: 15px;
   border-radius: 4px;
-  border: 1px solid #faf6f6;
+  border: 1px solid #cccaca;
   box-sizing: border-box;
   font-family: 'work sans', sans-serif;
 }
@@ -167,6 +167,12 @@ button:hover {
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   width: 320px;
+}
+label {
+  display: block;
+  margin-bottom: 6px;
+  color: #555;
+  font-weight: bold;
 }
 
 h1 {
