Se logra el inicio de sesion y se crea reservaciones.html el formulario para una resrvacion

--- a/views/admenu.html
+++ b/views/admenu.html
@@ -23,9 +23,11 @@
    
 
     <div id="mensaje" style="margin-top: 10px; font-weight: bold;"></div>
+    </div>
 
+<div class="container2">
     <h1>Menús Guardados</h1>
-    <table id="tablaMenus">
+    <table class="table" id="tablaMenus">
       <thead>
         <tr>
           <th>Nombre</th>
