--- a/views/contacto.html
+++ b/views/contacto.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Contacto - Restaurante 2 Ríos</title>
+  <title>Contactos</title>
   <link rel="stylesheet" href="../css/estilos.css">
 
   <style>
@@ -17,13 +17,6 @@
 
     }
 
-    .info-box {
-      background-color: rgba(255, 255, 255, 0.725);
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      text-align: center;
-    }
 
     .info-box img {
       width: 40px;
@@ -33,17 +26,7 @@
       margin-bottom: 15px;
     }
 
-    .info-box h2 {
-      color: #ff0707;
-      font-family: 'Playfair Display', serif;
-      margin-bottom: 10px;
-    }
-
-    .info-box p {
-      color: #ff0707;
-      font-family: 'Work sans', sans-serif;
-      font-size: 14px;
-    }
+    
 
     
     
@@ -76,7 +59,7 @@
     <div class="info-box">
       <img src="../img/horario.png" alt="Horario">
       <h2>Horario</h2>
-      <p>Lunes a Sabado: 10:00 a.m. - 10:00 p.m.</p>
+      <p>Lunes a Sabado: 2:00 p.m. - 10:00 p.m.</p>
     </div>
 
   </div>
