--- a/css/estilos.css
+++ b/css/estilos.css
@@ -120,6 +120,7 @@ button:hover {
   font-family: 'work sans', sans-serif;
 }
 
+
 .info-container {
   display: flex;
   justify-content: space-between;
@@ -159,15 +160,24 @@ button:hover {
   font-size: 14px;
 }
 
-
-.container {
-  background-color: white;
+.container { 
+  background-color: #f5efdeec;
   padding: 30px 40px;
-  margin: 100px auto 0;
+  margin: 20px auto 0;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   width: 320px;
 }
+
+.container2 {
+  background-color: #ffedbcec;
+  padding: 30px 40px;
+  margin: 20px auto 0;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  width: 800px;
+}  
+
 label {
   display: block;
   margin-bottom: 6px;
@@ -186,26 +196,58 @@ h1 {
   font-weight: bold;
 }
 
+
+.mensaje-exito {
+  background-color: #d4edda;
+  color: #155724;
+  padding: 12px;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  margin-top: 10px;
+  width: fit-content;
+ margin: 10px auto 0 auto; 
+  
+}
+
+.mensaje-error {
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 12px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+ margin: 10px auto 0 auto; 
+  width: fit-content;
+
+
+  
+}
+
   table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
+      
     }
 
     th, td {
       padding: 8px 12px;
       border: 1px solid #ddd;
       text-align: left;
-      
     }
 
+
     th {
-      background-color: #007bff;
+      background-color: #A04000;
       color: white;
      font-family: 'work sans', sans-serif;
+     
     }
 
     tbody tr:nth-child(even) {
-      background-color: #f2f2f2;
-      
+      background-color: #b96228;
+     
     } 
+
+
+ 
+
