--- a/views/menu.html
+++ b/views/menu.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
-  <div class="container">
-    
-    <h2 class="titulo2">Menús Guardados</h2>
-    <table id="tablamenu">
+
+  <div class="container2">  
+    <h2 class="titulo2">Menús </h2>
+    <table class="table" id="tablamenu">
       <thead>
         <tr>
           <th>Nombre</th>
-          <th>Descripción</th>
+          <th >Descripción</th>
           <th>Precio</th>
         </tr>
       </thead>
@@ -26,7 +26,7 @@
 
   <script src="menu.js"></script> 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   
 <nav class="menu">
     <a href="../views/login.html">Iniciar Sesión</a>
