--- a/views/registro.html
+++ b/views/registro.html
@@ -21,13 +21,14 @@
     <input type="email" id="correo" name="correo" required>
 
     <label for="contrasena">Contraseña:</label>
-    <input type="password" id="contrasena" name="contrasena" required>
+    <input type="password" id="contrasena" name="contrasena" required minlength="8">
 
 
     <button type="submit">Registrarse</button>
   </form>
 <script src="registro.js"></script>
-<div id="mensaje" style="margin-top: 10px; font-weight: bold;"></div>
+<div id="mensaje" style="margin-top: 20px; font-weight: bold;"></div>
+
 
 
 <br>
