--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -5,17 +5,20 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Panel de Administrador</title>
   
-  <link rel="stylesheet" href="../css/res.css"> <!-- Aquí se enlaza tu CSS personalizado -->
+  <link rel="stylesheet" href="../css/res.css"> 
   
 </head>
 <body>
 
+
+  
   <div class="admin-container">
     <h1>Bienvenido Administrador. <br> Que deseas ver?</h1>
     <div class="admin-buttons">
-      <a href="usuarios.html">👤 Ver Usuarios</a>
+      <a href="dashboard.html">📈Dashboard</a>
       <a href="admenu.html">📋 Ver Menús</a>
       <a href="admres.html">📆 Ver Reservaciones</a>
+      <a href="cambiar_tipo_usuario.html">👤 Gestion Usuarios</a>
     </div>
   </div>
 
