--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -15,6 +15,7 @@ header {
   text-align: center;
   padding-top: 0px;
 }
+
 .titulo2{
 color: #000000;
   text-align: center;
@@ -175,7 +176,7 @@ button:hover {
   margin: 20px auto 0;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  width: 1000px;
+  width: 1200px;
 }  
 
 label {
@@ -250,6 +251,74 @@ max-width: 90%;
      
     } 
 
+    
+
+.btn-group {
+  display: flex;
+  gap: 15px; 
+  justify-content: center; 
+}
+
+button.btn-editar {
+  background-color: #27ae60;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: auto; 
+}
+
+button.btn-eliminar {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: auto; 
+}
+
+button.btn-editar:hover {
+  background-color: #2ecc71;
+}
+
+button.btn-eliminar:hover {
+  background-color: #e53935;
+}
+
+.modal {
+   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.modal-contenido {
+   background: #e4e3e3f4;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  width: 90%;
+  text-align: center;
+}
+
+.modal-acciones {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-botones button {
+  margin: 10px;
+  padding: 10px 20px;
+}
 
  
 
