--- a/public/css/res.css
+++ b/public/css/res.css
@@ -233,3 +233,13 @@ button:hover {
       background-color: #ef1b04;
       transform: scale(1.05);
     }
+
+
+    #comentarios {
+    width: 90%;           
+    height: 50px;         
+    padding: 10px;
+    font-size: 1rem;
+    resize: vertical;
+    text-align: left;      
+  } 
