--- a/public/views/contacto.html
+++ b/public/views/contacto.html
@@ -27,7 +27,14 @@
       margin-bottom: 15px;
     }
 
-    
+   #mensaje {
+    width: 90%;           
+    height: 50px;         
+    padding: 10px;
+    font-size: 1rem;
+    resize: vertical;      
+    text-align: left;
+  } 
 
     
     
@@ -77,7 +84,7 @@
 </head>
 <body>
 
-  <h1>Contáctenos</h1>
+  <h1 class="titulo2">Contáctenos</h1>
 
   <form id="formContacto">
     <label for="nombre">Nombre:</label>
@@ -87,7 +94,7 @@
     <input type="email" id="correo" name="correo" required>
 
     <label for="mensaje">Mensaje:</label>
-    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+    <textarea id="mensaje" name="mensaje" rows="3" required></textarea>
 
     <button type="submit">Enviar Mensaje</button>
   </form>
